# hotkey-manager

./: .gitignore  CMakeLists.txt  README.md  Uninstall.cmake.in  config.h  config.h.in
client/: interface.cpp  interface.h
completions/: hotkey-manager-daemon.bash
daemon/: condition.cpp  condition.h  daemon.cpp  device.cpp  device.h  event.cpp  event.h  hotkey-manager-daemon.service.in  keyboard.cpp  keyboard.h  manager.cpp  manager.h  notification.cpp  notification.h  session.cpp  session.h
demo/: CMakeLists.txt  client.cpp  client.py
ipc/: encrypt.cpp  encrypt.h  event.cpp  event.h  uds.cpp  uds.h
man/: hotkey-manager-daemon.1.in  hotkey_manager.3.in
python/: __init__.py  build_wheel.py  hotkey_manager.pyi  impl.cpp  impl.h  module.cpp  pyproject.toml.in
temp/: CMakeLists.txt  test.cpp
